@@ -54,7 +54,7 @@ $(function() {
   <body>
     <div id="help">
     <h1>Progressive Loading</h1>
-    In this example, we're loading data from a JSON service that takes start and end date parameters; data is loaded progressively as the user scrolls the timeline. This is a good idea for very large datasets spread out over a long period of time.
+    In this example, we're loading data from a JSON service that takes start and end date parameters; data is loaded progressively as the user scrolls the timeline. This is a good idea for very large datasets spread out over a long period of time. (For this demonstration, I'm just using a mock service that returns random data - <a href="https://gist.github.com/1129009">see the PHP code here.</a>)
     </div>
     <div id="timemap">
         <div id="timelinecontainer">
